1.0.0.5:
  -fixed Adult Shooting Gallery showing without bow
  -added Dampe back in, he got lost in the reorganization, oops
  -fixed Bombchu Bowling has 2 prizes
  -fixed item capture on Darunias Joy
  -fixed colossus area logic
1.0.0.4:
  -added small key counters
  -started adding open/closed forest/door logic
  -added rainbow bridge requirements and a toggle for it
  -changed the default layout of the tracker to incorporate new icons
  -fixed frog ocarina minigame requires to play storm to them before
  -added bombchus as a sequence break for bombs (in most places)
  -added all kinds of logic sequence breaks (thanks SauceRelic!)
  -fixed tracker capture layout
  -added separate maps for child and adult to prep for reorganization
  -reorganized the internal structure of the data heavily, so I can add new stuff more easily
1.0.0.3:
  -fixed Zoras Domain/Fountain logic interaction between child and adult
  -fixed Zoras Fountain Fairy can't be opened with hammer
  -fixed Haunted Wasteland Central Structure capture for Stone of Agony not showing
  -fixed Mountain Crater with hoverboots but no bombs
  -improved Spirit Temple:
    -split up the items
    -tried to model the reqs (there might be inaccuracies because of the back and forth between ages)
  -improved Shadow Temple:
    -split up the items
    -tried to model the reqs
    -marked lens as optional (pretty easy to do the entire dungeon without)
    -added option to reach Bongo Bongo with longshot (there is a scarecrow you can reach)
  -improved Gerudo Training Grounds:
    -split up the items
    -added reqs to each of the outer chests
    -marked hammer as optional for the pillar room (can be easily skipped with a damage boost)
1.0.0.2:
  -added capture feature to Sheik at Colossus and Sheik in Ice Cavern
  -changed Man on Rooftop so Hookshot is skipable (with a pretty simple sidehop)
  -fixed Redead Grave not showing if Sun Song location has a checkmark
  -improved Deku:
    -split up the items